[package]
name = "blockchain-data"
version = "0.1.0"
authors = ["Jeff <fei.code@gmail.com>"]
edition = "2021"

[dependencies]
alloy = { version = "0.2.0", features = ["full"] }
anyhow = "1.0.86"
async-stream = "0.3.5"
derive_builder = "0.20.0"
futures = "0.3.30"
url = "2.5.2"
tokio = { version = "1.38.1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.15"


[dev-dependencies]
